--- a/Sounds.html
+++ b/Sounds.html
@@ -52,7 +52,7 @@ html {
     <div class="container-fluid d-flex row" style="justify-content: center; ">
 
       	<div class="col-lg-3">
-			<a href="UserProfile.html" class="get-started">
+			<a href="Task.html" class="get-started">
         <img src="img/btn/back.svg" style="height: 4rem; width: 4rem;"></a>
 		</div>
       	<div class="col-lg-1"></div>
@@ -85,13 +85,13 @@ html {
           <div class="col-md-3 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" style=" justify-content: center;">
          <!--    <div class="icon-box" style="background-image: url('img/A.gif'); width:100%; background-repeat: no-repeat; background-size: contain;"> -->
          	<div class="icon-box" style="padding:0px;">
-         		<img src="img/AA.png">
+         		 <a href="Learnenv.html"><img src="img/AA.png"></a>
             </div>
           </div>
 
           <div class="col-md-3 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" style="width: 100%; justify-content: center;">
          	<div class="icon-box" style="padding:0px;">
-         		<img src="img/I.png">
+         		 <a href="Learnenv.html"><img src="img/I.png"></a>
             </div>
           </div>
 
@@ -104,7 +104,7 @@ html {
            <div class="col-md-3 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100" style="width: 100%; justify-content: center;">
          <!--    <div class="icon-box" style="background-image: url('img/A.gif'); width:100%; background-repeat: no-repeat; background-size: contain;"> -->
          	<div class="icon-box" style="padding:0px;">
-         		<img src="img/O.png">
+         		 <a href="Learnenv.html"><img src="img/O.png"></a>
             </div>
           </div>
         </div>
