--- a/Reports.html
+++ b/Reports.html
@@ -52,7 +52,7 @@ html {
     <div class="container-fluid d-flex row" style="justify-content: center; ">
 
       	<div class="col-lg-3">
-			<a href="UserProfile.html" class="get-started">
+			<a href="Task.html" class="get-started">
         <img src="img/btn/back.svg" style="height: 4rem; width: 4rem;"></a>
 		</div>
       	<div class="col-lg-1"></div>
