--- a/Task.html
+++ b/Task.html
@@ -74,11 +74,11 @@ html {
       			<img class="svg" src="img/btn/report.svg" style="height: 6rem; width: 6rem;"></a>
 			</a>
       		</div>
-      		<div class="col-md-12">
+<!--       		<div class="col-md-12">
       		<a href="Reports.html" class="get-started">
       			<img  class="svg" src="img/btn/badges.svg" style="height: 6rem; width: 6rem;"></a>
 			</a>
-      		</div>
+      		</div> -->
       	</div>
 
       <!-- </nav>.nav-menu -->
